# prototype.chatfs

./: .envrc  .gitignore  .gitmodules  .prettierignore  CLAUDE.md  Cargo.toml  HACKING.md  LICENSE  README.md  STATUS.md  TODO.md  eslint.config.mjs  package.json  pnpm-workspace.yaml  pyproject.toml  rust-analyzer.toml
.claude/: todo.jsonschema.yaml  todo.md
.claude/decision.kb/: CLAUDE.md  adopt-role-keyed-kb-collections.md  bb1-is-har-browse.md  example-com-baseline-transition-only.md  interactive-single-user-usage.md  rename-safe-to-whitehat-automation-boundary.md  rs-dir-prefix-no-crate-prefix.md  schema-home-and-naming.md  separate-diagnostic-stream.md  skip-ts-rename-go-rust-port.md  test-conversion-precedes-port-scaffold.md  test-split-by-extension.md  uniform-emit-with-randomized-test-mode.md
.claude/ideas.kb/: 2026-05-16-000-buck2-migration.md  2026-06-20-000-cache-layer-and-daemon-init-surface.md  2026-07-19-000-Purity-gate--AST-scan-for-shell-only-imports.md  CLAUDE.md
.claude/observation.kb/: CLAUDE.md  events-jsonl-out-har-are-cruft.md
.claude/principle.kb/: CLAUDE.md  defer-and-runtime-assert.md  zero-side-effect-diagnostics.md
.claude/reference.kb/: CLAUDE.md
.claude/sessions.kb/: CLAUDE.md  dev-kb-five-collection-pattern.md
.claude/todo.kb/: 2026-01-02-000-harmonize-with-llm-skills.md  2026-01-02-001-migrate-todo-to-subtask-format.md  2026-01-02-002-apply-skill-conventions-post-evolution.md  2026-03-12-000-chatgpt-splat-parsemessages-unit-factor-and-mutation-testing.md  2026-03-12-001-chatgpt-splat-fork-semantics-discussion-and-tests.md  2026-03-28-000-clean-stale-references-to-deleted-docs.md  2026-04-20-000-review-lib-chatfs-for-integration.md  2026-04-20-001-reconcile-design-rationale-with-current-architecture.md  2026-04-20-002-har-browse-implement-real-capture.md  2026-05-11-000-rename-incubator-to-chatfs-cli-mockup.md  2026-05-13-000-place-rust-port-kb-at-proper-home.md  2026-05-16-000-execute-rust-port-kb-scope-refactor.md  2026-05-16-001-polyglot-package-dir-naming-sweep.md  2026-05-19-000-drain-too-many-changes-freeze.md  2026-07-13-000-graduation-and-integration.md
.claude/todo.kb/2026-01-02-000-harmonize-with-llm-skills.kb/: 2026-01-02-002-apply-skill-conventions-post-evolution.md
.claude/verified-claim.kb/: CLAUDE.md
design-incubators/: README.md
design-incubators/fork-representation/: CLAUDE.md  README.md  example-fork-scenarios.md  investigate-forks.py
design-incubators/provider-abstraction/: README.md
design-incubators/provider-abstraction-strategy/: CLAUDE.md  README.md
docs/: README.md
docs/dev/: README.md  design-rationale.md  development-plan.md  open-questions-revision-notes.md  technical-design.md  technical-policy.jsonschema.yaml
docs/dev/aistudio-schema/: .envrc  .gitignore  README.md  accessors.jsonl.do  aistudio-reauth  all.do  body-shape.py  bundles.do  curl-aistudio  extract-bundles.py  grep-accessors.sh  live-replay.sh  parse-accessors.py  prettify-bundles.sh  pyproject.toml  refresh-secrets.sh  walk-graph.py
docs/dev/aistudio-schema/.claude/: todo.md
docs/dev/aistudio-schema/devlog/: 2026-07-11-000-rosetta-pivot-to-listprompts.md  2026-07-11-001-rosetta-holds-n-golden-pairs.md  2026-07-11-002-rosetta-localizes-endpoint-differences.md  CLAUDE.md
docs/dev/aistudio-schema/discourse.kb/: CLAUDE.md
docs/dev/aistudio-schema/discourse.kb/claims.kb/: accessor-names-survive-minification.md  alt-json-yields-named-projection.md  bundle-is-only-schema-source.md  field-names-absent-client-side.md  field-numbers-are-literals.md  getter-recovery-is-partial.md  i9a-is-resolvedrive-response.md  internal-proto-unpublished.md  makersuite-rpc-type.md  no-grpc-reflection.md  numbers-cross-checked-against-prompt-shape.md  offline-decode-needs-curation.md  ordering-alignment-is-ambiguous.md  primitive-encodes-type.md  primitive-legend-partial.md  purpose-feeds-bb2-extraction.md  schema-recoverable-from-bundle.md  schema-ships-to-browser.md
docs/dev/aistudio-schema/discourse.kb/deductions.kb/: alignment-cannot-fix-the-map-alone.md  immutable-protos-leak-schema.md  server-route-unavailable.md
docs/dev/aistudio-schema/discourse.kb/definitions.kb/: accessor.md  immutable-js-protos.md
docs/dev/aistudio-schema/discourse.kb/questions.kb/: are-recovered-numbers-correct.md  can-we-decode-deterministically.md  how-does-this-serve-chatfs.md  why-does-bundle-extraction-work.md  why-extract-from-bundle-not-server.md
docs/dev/aistudio-schema/discourse.kb/sources.kb/: bundle-audit.md  cdp-capture.md  live-replay-probe.md  readme.md  rosetta-correlation-experiment.md
docs/dev/aistudio-schema/rosetta/: capture.sh  check.do  convert.py  correlate.py  listprompts.alt-json.json  resolvedrive.alt-json.json  verify.py
docs/dev/aistudio-schema/rosetta/endpoint/listprompts/: jspb.json  meta.json
docs/dev/aistudio-schema/rosetta/endpoint/resolvedrive/: check.do  jspb.json  meta.json
lib/chatfs/: README.md  __init__.py
lib/claifs/: README.md  __init__.py
(+505 files in other folders)
