[project]
name = "chatfs-workspace"
version = "0"
description = "Top-level workspace for chatfs development; depends on chatfs for default install"
requires-python = ">=3.10"
dependencies = ["chatfs"]

[dependency-groups]
dev = ["bukzor-chatgpt-export[dev]"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/chatfs-fuser", "packages/har-browse"]

[tool.uv.sources]
chatfs = { workspace = true }
bukzor-chatgpt-export = { workspace = true }

[tool.pytest.ini_options]
python_classes = ["Describe*", "When*", "Test*"]
python_functions = ["it_*", "test_*"]
