[project]
name = "chatfs-workspace"
version = "0"
description = "Top-level workspace for chatfs development; depends on chatfs for default install"
requires-python = ">=3.10"
dependencies = ["chatfs"]

[dependency-groups]
dev = ["bukzor-chatgpt-export[dev]"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/chatfs-fuser", "packages/har-browse"]

[tool.uv.sources]
chatfs = { workspace = true }
bukzor-chatgpt-export = { workspace = true }

[tool.pyright]
# Temporary workaround: design-incubators use flat sibling-importing scripts
# rather than proper packages. Each incubator dir gets a scoped extraPath so
# pyright resolves intra-incubator imports without polluting the global module
# namespace. Drop entries here when an incubator graduates to packages/*.
executionEnvironments = [
  { root = "docs/dev/design-incubators/chatfs-mockup-chatgpt", extraPaths = ["docs/dev/design-incubators/chatfs-mockup-chatgpt"] },
]

[tool.pytest.ini_options]
python_classes = ["Describe*", "When*", "Test*"]
python_functions = ["it_*", "test_*"]
